added more figures

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -330,7 +330,7 @@ the WBO distribution of the amide bond shifts significantly if the positively ch
 In molecule 11, the removal of the phosphate group shifts the distribution of the red bond. In molecule 12, both the amide and ester bond are sensitive to the same
 negatively charged oxygen indicated by two circles around the oxygen.
 
-![**Assessment of fragmentation scheme**
+![**Assessment of fragmentation scheme illustrate an accuracy vs cost trade-off**
 Computational cost vs distance score of the fragments for the bonds in the benchmark set shown in figure {@fig:full_validation_set}.
 Computational cost is the cubed of heavy atoms in the fragment. The threshold is the maximum amount of change allowed
 in the ELF10 WBO relative to the parent's ELF10 WBO during fragmentation.](images/figure_11-fixed.svg){#fig:joint_plots}
@@ -345,7 +345,7 @@ in the lower left quadrant (defined as cost < 10000 and score < 0.05) as shown i
 WBO distributions with respect to conformations [figure 5 blue distribution]. Most of them fall under 0.02. Both of these data points
 leads us to recommend a distruption threshold of 0.03 for our fragmentation scheme. While the current scheme does not provide a perfect solution,
 plots in figure {@fig:joint_plots} shows less fragments outside of the lower left region for thresholds 0.01, 0.03 and 0.05. This scheme  preforms better than other schemes such as the
-scheme Pfizer used in []@doi:10.1021/acs.jcim.9b00373](figure {@fig:joint_plots}, lower right and table @tbl:benchmark).
+scheme Pfizer used in [@doi:10.1021/acs.jcim.9b00373](figure {@fig:joint_plots}, lower right and table @tbl:benchmark).
 
 |scheme | fragments in lower left quadrant |
 |---|---|
@@ -361,5 +361,33 @@ scheme Pfizer used in []@doi:10.1021/acs.jcim.9b00373](figure {@fig:joint_plots}
 Table: Number of fragments in the lower left quadrant in figure {@fig:joint_plots} defined as a distance score less than
 0.1 and computational cost less than 10000. {#tbl:benchmark}
 
-####
+#### Benchmark results reveal chemical groups that induce long range effects
 
+![** Using the WBO as an indicator of chemical environment distruption improves fragmentation **
+Distribution of differences in distance scores for fragments in the validation set (SI fig @fig:full_validation_set) generated using
+Pfizer's rules and our scheme using 0.03 as the distruption threshold. For many bonds, both approaches yield equally good fragments (shown in green). In some cases,
+Prizer's rules preforms better than our scheme (shown in red), however, the differences are usually very small. In most cases, using the WBO as an indicator improves
+the distance score (shown in blue)](images/combined_score_differences.svg){#fig:difference_hist}
+
+In the benchmark experiment (figure @fig:joint_plots), the distance scores measured the distance between WBO distributions generated from Omega generated conformers of the parents and fragments.
+Omega aims to generate low energy conformers [@doi:10.1021/ci100031x] and in some cases, fragments only have one or two low energy conformers so it is not clear
+how accurate the distances measured are. In addition, only comparing low energy conformers do not fully capture torsion energy barriers which we
+also want to ensure remain accurate relative to their parent's torsion energy scan. To mitigate the above mentioned issues when validating our scheme,
+we also added WBOs calculated from conformers generated on a grid of torsion angles about the bonds which included higher energy conformers
+that are closer to conformers generated in canonical torsion scans. Furthermore, since we know that WBOs from structures in a QC torsion scan
+are anti correlated with the QC torsion energy scan (@fig:sub_phenyl_qc_scan), adding these WBOs to the distributions provided a better validation
+of our method than only looking at the distance between omega generated WBO distributions. The differences in distances of these distributions from fragments
+generated with our scheme and [@doi:10.1021/acs.jcim.9b00373] is shown in figure @fig:difference_hist.
+
+For many molecules, using a common sense rule based approach, such as the one used in [@doi:10.1021/acs.jcim.9b00373] to fragmenting molecules, will yield fragments that are
+appropriate both in size and electronic properties as shown in green in figure {@fig:difference_hist}, and sometimes can even preform slightly better than
+using the WBO as an indicator (fig {@fig:difference_hist}, red). However, in many cases, especially if certain chemical groups are involved, using
+the WBO as an indicator significantly improves the electron population overlap about the bonds and brings them closer to their parent's chemical environment (fig @fig:difference_hist, blue).
+
+![** Some chemical groups induce non local effects that are captured in fragments when using the WBO as an indicator of chemical environments **
+Wiberg bond order distributions for parent molecules (shown in blue) and fragments generated with Pfizer rules (shown in orange) and our
+scheme (shown in green). This figure shows eight chemical groups where the WBO distributions of the highlighted bonds change
+when those groups are removed. These changes are consistent across the validation set.
+](images/figure_12.svg){#fig:chemical_groups}
+
+Upon closer inspection of the validation set, we found eight chemical groups that induce long range effects to sensitive bonds.
