added section on validation set results

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -209,6 +209,8 @@ in figure 8 is as follows:
 5. If the fragment's WBO differs by more than a user defined threshold, continue grow out one bond at a time until the
 fragment's WBO is within the threshold of the parent WBO.
 
+[*(Add discussion on the changes I made to the Pfizer scheme for our minimal fragment before we start building out and why. Add SI figure justifying it)*]{.banner .lightyellow}
+
 ### Fragmentation schemes can be assessed by their ability to preserve the chemical environment while minimizing fragment size
 This fragmentation scheme improves upon Pfizers scheme [CITE], however, it leaves some parameters up to the user. In order to asses various
 thresholds and different fragmentation schemes in general, we generated a diverse set of FDA-approved drug molecules that can be
@@ -363,9 +365,9 @@ Table: Number of fragments in the lower left quadrant in figure {@fig:joint_plot
 
 #### Benchmark results reveal chemical groups that induce long range effects
 
-![** Using the WBO as an indicator of chemical environment distruption improves fragmentation **
+![**Using the WBO as an indicator of chemical environment distruption improves fragmentation**
 Distribution of differences in distance scores for fragments in the validation set (SI fig @fig:full_validation_set) generated using
-Pfizer's rules and our scheme using 0.03 as the distruption threshold. For many bonds, both approaches yield equally good fragments (shown in green). In some cases,
+Pfizer's rules and our scheme using 0.03 as the distruption threshold. For many bonds, both approaches yield equally preforming fragments (shown in green). In some cases,
 Prizer's rules preforms better than our scheme (shown in red), however, the differences are usually very small. In most cases, using the WBO as an indicator improves
 the distance score (shown in blue)](images/combined_score_differences.svg){#fig:difference_hist}
 
@@ -380,14 +382,56 @@ of our method than only looking at the distance between omega generated WBO dist
 generated with our scheme and [@doi:10.1021/acs.jcim.9b00373] is shown in figure @fig:difference_hist.
 
 For many molecules, using a common sense rule based approach, such as the one used in [@doi:10.1021/acs.jcim.9b00373] to fragmenting molecules, will yield fragments that are
-appropriate both in size and electronic properties as shown in green in figure {@fig:difference_hist}, and sometimes can even preform slightly better than
+the same fragments generated with our scheme shown in green in figure {@fig:difference_hist}, and sometimes can even preform slightly better than
 using the WBO as an indicator (fig {@fig:difference_hist}, red). However, in many cases, especially if certain chemical groups are involved, using
 the WBO as an indicator significantly improves the electron population overlap about the bonds and brings them closer to their parent's chemical environment (fig @fig:difference_hist, blue).
+It is important to note that when the fragment generated from both scheme are the same (green in figure @fig:difference_hist), they are not necessarily the
+optimal fragment and both schemes can preform equally poorly (see SI).
 
-![** Some chemical groups induce non local effects that are captured in fragments when using the WBO as an indicator of chemical environments **
+![**Some chemical groups induce non local effects that are captured in fragments when using the WBO as an indicator of chemical environments**
 Wiberg bond order distributions for parent molecules (shown in blue) and fragments generated with Pfizer rules (shown in orange) and our
 scheme (shown in green). This figure shows eight chemical groups where the WBO distributions of the highlighted bonds change
 when those groups are removed. These changes are consistent across the validation set.
 ](images/figure_12.svg){#fig:chemical_groups}
 
-Upon closer inspection of the validation set, we found eight chemical groups that induce long range effects to sensitive bonds.
+Upon closer inspection of the validation set, we found eight chemical groups that induce long range effects to sensitive bonds shown in
+figure @fig:chemical_groups. These chemical groups with representative examples are shown in figure @fig:chemical_groups. The
+groups are ordered by how strongly they induce long range effect, in decreasing order. The most dramatic change happens when a phosphate
+group is removed (figure @fig:chemical_groups, A). The variance of the WBO distribution increases which conveys an increase in
+relative energies of conformers in the QC torsion scans. In other molecules where phosphates are removed, the variance can
+decrease even if the phosphate group is ten bonds away (figure @fig:failure_modes, F and SI). In figure @fig:chemical_groups, B, removing
+a protonated nitrogen that is double bonded causes the WBO distribution to shift and the variance to increase. Long range effects are seen in
+other molecules with similar chemical patterns up to eight bonds away (SI). Removing a cyano group (fig @fig:chemical_groups, C) and sulfonamide group (@fig:chemical_groups, D)
+have similar effects on the WBO distributions which is also consistent with other molecules that contain these groups up to three bonds away (SI).
+A protonated nitrogen and deprotonated oxygen (@fig:chemical_groups E and F) can effects bonds between 3-6 bonds away (SI). While the changes in distributions
+for removing a nitro group and sulfur (@fig:chemical_groups, G and H) are not as big as other chemical groups, they are mostly consistent across other molecules in the
+validation set (SI).
+
+![**Using the WBO as an indicator when fragmenting can still fail to find the optimal fragment**
+Our scheme can fail in several ways. A. A smaller fragment (shown in orange) is just as good as a larger fragment (shown in green) even if the ELF10 WBO estimate
+of the bond in the smaller fragment relative to its parent (shown in blue) is more than the disruption threshold. B. While our scheme finds a fragment with good
+overlap of the WBO distributions (shown in green), it is not the smallest fragment possible with good distributions overlap (smallest
+fragment with good overlap is shown in purple). C. The fragment
+we find is bigger than what the simple scheme finds (shown in orange) but without improving the WBO overlap (green). The optimal fragment that
+neither scheme generates is shown in purple. D. Our scheme finds a larger fragment that has worse WBO distribution overlap.
+E and F. Sometimes, almost the entire molecule is needed to achieve good WBO distribution overlap between the fragment and the parent. This is
+not a failure mode but inherent to the challenge of fragmenting molecules for QC calculations. ](images/figure-14.svg){#fig:failure_modes}
+
+While our scheme captures long range effects that a simple rule based approach does not, it is not an optimal solution and will sometimes fail to find
+the most optimal fragment. By optimal we mean the smallest fragment that retains the torsion potential of the bond in the parent molecule. Our
+scheme can fail in multiple ways as illustrated in figure @fig:failure_modes and listed below.
+
+1. We find a fragment with good WBO distributions overlap but do not find the smallest fragment. This is shown in both @fig:failure_modes A and B. In A, the fragment that Pfizer scheme find is smaller
+and has a WBO distribution that is close to the parent's WBO distribution (MMD 0.019). In this case, the ELF10 WBO estimate of the bond in the fragment
+is 0.11 lower than the ELF10 WBO estimate in the parent molecule. In B, our fragment has better WBO distribution overlap with the parent WBO distribution vs
+using Pfizer's scheme (0.017 vs 0.212), but it is not the smallest fragment. According to the fragment highlighted in purple, the benzene ring is not
+required to achieve good overlap of the WBO distributions (0.051)
+2. We find a fragment that is bigger than Pfizer's scheme fragment and the remote substituents do not improve the WBO distribution overlap (MMD 0.079 vs 0.071) (@fig:failure_modes C).
+The better fragment is shown in purple. It is both smaller and has better overlap (MMD 0.027) than the orange and green fragment.
+3. We find a fragment that is both larger and has worse overlap (0.054 vs 0.024) than what the Pfizer's scheme generates (fig @fig:failure_modes)
+
+While it is usually possible to find a fragment that is significantly smaller than the parent and retains remote substituent effects, the effects
+are sometimes more than 3-6 bonds away and a large fragment is needed to accurately represent the chemical environment of the parent molecule. Two such
+examples are shown in figure @fig:failure_modes E and F. In E, not only is the protonated nitrogen needed (shown in green), but the alcohol group is also needed to
+achieve good WBO distribution overlap (shown in purple). In F, the phosphate group nine bonds away from the bond of interest is needed to get
+the density of of the mode at 1.2 (shown in blue and purple).
