--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -2,7 +2,7 @@
 
 ### Torsion energy barriers are sensitive to the chemical environment, which can be influenced by remote substituents
 In most forcefields, torsions are defined by the quartet of atom types involved in the dihedral [@doi:10.1021/ja00315a051; @doi:10.1021/ja00124a002;
-10.1002/jcc.540040211; @doi:10.1021/ja9621760].
+@doi:10.1002/jcc.540040211; @doi:10.1021/ja9621760].
 However, the quartet of atom types do not always capture the relevant chemistry, especially when the effects
 are non local i.e., atoms contributing to hyperconjugation, delocalization or other non classical effects,
 are not part of the quartet involved in the torsion [@doi:10.1186/s13321-019-0371-6]. Figure {@fig:biphenyls}, A illustrates
@@ -38,7 +38,7 @@ The QC torsion barrier height is linear WBO.](images/figure_3.svg){#fig:biphenyl
 
 ### The Wiberg Bond Order quantifies the electronic population overlap between two atoms and captures bond conjugation
 The Wiberg bond order (WBO) is a bond property that is calculated using orthonormalized atomic orbitals that are used
-as basis sets in semi-empirical QC methods[@doi:10.1002/jcc]. Wiberg originally formulated it for the CNDO basis set [@doi:10/fvwkkh] but it can be
+as basis sets in semi-empirical QC methods[@doi:10.1002/jcc.20494]. Wiberg originally formulated it for the CNDO basis set [@doi:10/fvwkkh] but it can be
 easily extended to other semi-empirical QC methods such as AM1 [@doi:10.1021/ja00299a024] and PM3 [@doi:10.1002/jcc.540100208]. The WBO is a measure
 of electron density between two atoms in a bond and is given by the quadratic sum of the density matrix elements over 
 occupied atomic orbitals on atoms A and B
@@ -87,7 +87,7 @@ involved in conjugated systems have WBOs that are correlated with each other.
 
 To investigate how WBOs change with conformation, we used Omega [@doi:10.1021/ci100031x] to generate
 conformers for a set of kinase inhibitors [Supplementary figure 1] and calculated the Lowdin-Wiberg bond order for each conformation from an
-hf3c [@doi:10.1002/jcc.23317] geometry optimized calculation using Psi4 [@doi:10.1021/acs.jctc.7b00174].Omega is a knowledge-based
+hf3c [@doi:10/f42979] geometry optimized calculation using Psi4 [@doi:10.1021/acs.jctc.7b00174].Omega is a knowledge-based
 conformer generator that uses a modified version of MMFF94s [@doi:10/brxdg7] to score conformations. It has been shown to accurately reproduce experimentally
 observed crystallography conformers in the Platinum benchmark dataset [@doi:10.1021/acs.jcim.7b00505]. Figure 4 illustrates
 the results for Gefitinib [Figure 4A], a representative molecule. Figure 4B shows the distribution of WBOs for all rotatable bonds
